[package]
name = "oxigraph_server"
version = "0.4.0-alpha.1-dev"
authors = ["Tpt <thomas@pellissier-tanon.fr>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/oxigraph/oxigraph/tree/main/server"
homepage = "https://oxigraph.org/server/"
description = """
Oxigraph SPARQL HTTP server
"""
edition = "2021"
rust-version = "1.65"

[dependencies]
anyhow = "1"
oxhttp = { version = "0.1", features = ["rayon"] }
clap = { version = "4.0", features = ["derive"] }
oxigraph = { git = "https://github.com/oxigraph/oxigraph.git", version = "0.4.0-alpha.1-dev", rev = "db7fab0", features = ["http_client"] }
oxrdf = { git = "https://github.com/oxigraph/oxigraph.git", version = "0.2.0-alpha.1-dev", rev = "db7fab0" }
sparesults = { git = "https://github.com/oxigraph/oxigraph.git", version = "0.2.0-alpha.1-dev", rev = "db7fab0", features = ["rdf-star"] }
spargebra = { git = "https://github.com/oxigraph/oxigraph.git", version = "0.3.0-alpha.1-dev", rev = "db7fab0" }
rand = "0.8"
url = "2"
oxiri = "0.2"
flate2 = "1"
rayon-core = "1"
nanoid = "0.4"
chrono = "0.4"
rdf-canon = { git = "https://github.com/yamdan/rdf-canon-rust.git", version = "0.10.1" }

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
escargot = "0.5"
predicates = "3"
