[package]
name = "oxigraph_server"
version = "0.4.0-alpha.1-dev"
authors = ["Tpt <thomas@pellissier-tanon.fr>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/oxigraph/oxigraph/tree/main/server"
homepage = "https://oxigraph.org/server/"
description = """
Oxigraph SPARQL HTTP server
"""
edition = "2021"
rust-version = "1.65"

[dependencies]
anyhow = "1"
oxhttp = { version = "0.1", features = ["rayon"] }
clap = { version = "4.0", features = ["derive"] }
oxigraph = { git = "https://github.com/oxigraph/oxigraph.git", rev = "922023b", features = ["http_client"] } # to be fixed once Oxigraph v0.4 is released
oxrdf = { git = "https://github.com/oxigraph/oxigraph.git", rev = "922023b" } # to be fixed once Oxigraph v0.4 is released
sparesults = { git = "https://github.com/oxigraph/oxigraph.git", rev = "922023b", features = ["rdf-star"] } # to be fixed once Oxigraph v0.4 is released
spargebra = { git = "https://github.com/oxigraph/oxigraph.git", rev = "922023b" } # to be fixed once Oxigraph v0.4 is released
rand = "0.8"
url = "2"
oxiri = "0.2"
flate2 = "1"
rayon-core = "1"
rdf-canon = { git = "https://github.com/zkp-ld/rdf-canon.git", version = "0.11.0" }
rdf-proofs = { git = "https://github.com/zkp-ld/rdf-proofs.git", version = "0.2.0", features = ["rdf-star"]}

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
escargot = "0.5"
predicates = "3"
